fixed gap on repair page/nav bar links were in wrong order on iphone 5c page

--- a/css/style.css
+++ b/css/style.css
@@ -778,7 +778,7 @@ background: white;
 #accordion
 {
 background-color:#45E6C5;
-height:100%;
+min-height:600px;
 width:100%;
 background-image: url("../Pictures/headerbg.png");
 position:relative;
@@ -852,7 +852,7 @@ font-size:88%;
 
 .ui-page.ui-page-theme-a.ui-page-active
 {
-min-height:600px;
+min-height:600px !important;
 background-color:#1A1A1A;
 background-image: url("../Pictures/headerbg.png");
 }
@@ -873,6 +873,7 @@ height:18px !important;
 top:55% !important;
 margin-top:-10px !important;
 }
+
 
 
 
@@ -1008,7 +1009,7 @@ float:left;
 background-color:white;
 color: white;
 font-size: 20px;
-margin-top:10%;
+margin-top:8%;
 text-align: center;
 background-image: url("../Pictures/footer-background.png");
 }
